--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sdb8",
-  "version": "8.1",
+  "version": ">=18",
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0"
